# dev2

./: CMakeLists.txt
stdc/: CMakeLists.txt
stdc/abort/: CMakeLists.txt  main.cpp
stdc/abs/: CMakeLists.txt  main.cpp
stdc/access/: CMakeLists.txt  main.cpp
stdc/assert/: CMakeLists.txt  main.cpp
stdc/atexit/: CMakeLists.txt  main.cpp
stdc/atoi/: CMakeLists.txt  main.cpp
stdc/bsearch/: CMakeLists.txt  main.cpp
stdc/ctemplate/: CMakeLists.txt  main.cpp
stdc/div/: CMakeLists.txt  main.cpp
stdc/exit/: CMakeLists.txt  main.cpp
stdc/fgets/: CMakeLists.txt  main.cpp
stdc/fopen/: CMakeLists.txt  main.cpp
stdc/fseek/: CMakeLists.txt  main.cpp
stdc/ftell/: CMakeLists.txt  main.cpp
stdc/getenv/: CMakeLists.txt  main.cpp
stdc/isctype/: CMakeLists.txt  main.cpp
stdc/main/: CMakeLists.txt  build.ninja.tmp  main.cpp
stdc/malloc/: CMakeLists.txt  main.cpp
stdc/math/: CMakeLists.txt  main.cpp
stdc/memcmp/: CMakeLists.txt  main.cpp
stdc/memcpy/: CMakeLists.txt  main.cpp
stdc/memmove/: CMakeLists.txt  main.cpp
stdc/memset/: CMakeLists.txt  main.cpp
stdc/printf/: CMakeLists.txt  printf.cpp
stdc/puts/: CMakeLists.txt  main.cpp
stdc/qsort/: CMakeLists.txt  main.cpp
stdc/rand/: CMakeLists.txt  main.cpp
stdc/remove/: CMakeLists.txt  main.cpp
stdc/rename/: CMakeLists.txt  main.cpp
stdc/setjmp/: CMakeLists.txt  main.cpp
stdc/sizeof/: CMakeLists.txt  main.cpp
stdc/strcat/: CMakeLists.txt  main.cpp
stdc/strchr/: CMakeLists.txt  main.cpp
stdc/strcmp/: CMakeLists.txt  main.cpp
stdc/strcpy/: CMakeLists.txt  main.cpp
stdc/strcspn/: CMakeLists.txt  main.cpp
stdc/strftime/: CMakeLists.txt  main.cpp
stdc/strlen/: CMakeLists.txt  main.cpp
stdc/strncmp/: CMakeLists.txt  main.cpp
stdc/strpbrk/: CMakeLists.txt  main.cpp
stdc/strrchr/: CMakeLists.txt  main.cpp
stdc/strspn/: CMakeLists.txt  main.cpp
stdc/strstr/: CMakeLists.txt  main.cpp
stdc/strtod/: CMakeLists.txt  main.cpp
stdc/strtok/: CMakeLists.txt  main.cpp
stdc/strtol/: CMakeLists.txt  main.cpp
stdc/strtoul/: CMakeLists.txt  main.cpp
stdc/struct/: CMakeLists.txt  main.cpp
stdc/system/: CMakeLists.txt  main.cpp
stdc/time/: CMakeLists.txt  main.cpp
stdc/tolower/: CMakeLists.txt  main.cpp
stdc/toupper/: CMakeLists.txt  main.cpp
stdc/va_list/: CMakeLists.txt  main.cpp
stdc/vprintf/: CMakeLists.txt  main.cpp
stdcxx/: CMakeLists.txt
stdcxx/cxxtemplate/: CMakeLists.txt  main.cpp
stdcxx/sort/: CMakeLists.txt  main.cpp
stdcxx/string/: CMakeLists.txt  main.cpp
win32/: CMakeLists.txt
win32/CreateDirectory/: CMakeLists.txt  main.cpp
win32/DeleteFile/: CMakeLists.txt  main.cpp
win32/FindFirstFile/: CMakeLists.txt  main.cpp
win32/GetFileAttributes/: CMakeLists.txt  main.cpp
win32/GetFileSize/: CMakeLists.txt  main.cpp
win32/GetModuleFileName/: CMakeLists.txt  main.cpp
win32/MessageBox/: CMakeLists.txt  main.cpp
win32/ShellExecute/: CMakeLists.txt  main.cpp
win32/Win32TemplateConsoleApp/: CMakeLists.txt
win32/Win32TemplateDialogApp/: CMakeLists.txt  main.cpp  main_res.rc  resource.h
win32/Win32TemplateWindowApp/: AboutDlg.cpp  CMakeLists.txt  InputBox.cpp  main.cpp  main.h  main_res.rc  resource.h  utils.cpp
win32/Win32TemplateWindowApp2/: AboutDlg.cpp  CMakeLists.txt  Canvas.cpp  InputBox.cpp  README.txt  Toolbar.cpp  main.cpp  main.h  main_res.rc  resource.h
win32/win32template/: CMakeLists.txt  main.cpp
